# mow

./: .gitignore  AsusG14BildAufUndAb.ahk  Ideas.md  README.md  TODO.md  images.py  mow.py  pyproject.toml  pyproject.toml.bak  requirements.txt  videos.py  x_images.py  x_mow.py  x_videos.py
drafts/: copyxmpfromduplicates.py
fluxus/: fluxus.py
general/: calcMD5ofAllFilesInDir.py  tkinterhelper.py  verboseprinterclass.py  xmpreader.py
image/: imageclusterer.py  imagefile.py  imagehelper.py  imageparser.py  imagerenamer.py  imagesearcher.py
modules/: entrypoint.py
modules/audio/: audiofile.py  audiorenamer.py
modules/general/: calcMD5ofAllFilesInDir.py  checkresult.py  filenamehelper.py  genericmediafile.py  medafilefactories.py  mediaaggregator.py  mediaconverter.py  mediacopier.py  mediafile.py  mediafilerenamer.py  mediagrouper.py  medialocalizer.py  mediarater.py  mediarenamer.py  mediatagger.py  mediatransitioner.py  metadatareader.py  tkinterhelper.py  verboseprinterclass.py
modules/image/: imageaggregator.py  imageclusterer.py  imageconverter.py  imagefile.py  imagehelper.py  imageparser.py  imagerenamer.py  imagesearcher.py
modules/mow/: foldertreeprinter.py  mow.py  mowstatusprinter.py  mowtags.py  (+1 more)
test/: test_imagerenamer.py
tests/: test.gpx  test_aggregator.py  test_copier.py  test_grouper.py  test_imageconverter.py  test_imagerenamer.py  test_localizer.py  test_mow.py  test_mowrename.py  test_mowtags.py  test_ratetransition.py  test_renamer.py  test_video.py  test_videorenamer.py  tests.ipynb
video/: transcodeallmovs.py  transcodevideo.py
(+15 files in other folders)
